[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless"
version = "0.1.0"
description = "Self-evolving agent framework — discover, refine, and share agent skills through reflective trace analysis."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Limitless Contributors"}]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
limitless = "limitless.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
